--- a/.github/workflows/triggered.yaml
+++ b/.github/workflows/triggered.yaml
@@ -16,6 +16,7 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
+    if: github.event.workflow_run.conclusion == 'success' && github.event.workflow_run.outputs.flag == 'true'
 
     steps:
       - uses: actions/checkout@v4
