--- a/.github/workflows/triggered.yaml
+++ b/.github/workflows/triggered.yaml
@@ -12,7 +12,7 @@ permissions:
 jobs:
   test:
     runs-on: ubuntu-latest
-    if: github.event_name == 'repository_dispatch' && github.event.flag == 'true'
+    if: github.event_name == 'repository_dispatch' && github.event.client-payload == 'true'
 
     steps:
       - uses: actions/checkout@v4
