--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -29,4 +29,4 @@ jobs:
           token: ${{ secrets.PUSH_TOKEN }}
           repository: hajle-silesia/test
           event-type: test
-          client-payload: true
+          client-payload: '{"flag": "true"}'
